<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondaryColor"
        android:padding="20dp"
        tools:context=".ui.DrinkDetailsActivity">

        <ImageView
            android:id="@+id/intro_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="#FBBFB9"
            android:contentDescription="@string/intro_image_description"
            android:minWidth="10dp"
            android:src="@drawable/drink06"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/drink_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@string/gin_e_tonica"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro_image" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro_image" />

        <ImageView
            android:id="@+id/baseline_access_time_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_access_time_24"
            app:layout_constraintEnd_toStartOf="@+id/baseline_favorite_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/drink_info_text"
            android:contentDescription="TODO" />


        <TextView
            android:id="@+id/time_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/favorite_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/baseline_access_time_icon" />

        <ImageView
            android:id="@+id/baseline_favorite_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_favorite_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/baseline_access_time_icon"
            app:layout_constraintTop_toBottomOf="@+id/drink_info_text" />

        <TextView
            android:id="@+id/favorite_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/likes"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/time_info_text"
            app:layout_constraintTop_toBottomOf="@+id/baseline_favorite_icon" />

        <View
            android:id="@+id/group_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favorite_text" />

        <TextView
            android:id="@+id/ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@string/ingredients"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group_divider" />

        <TextView
            android:id="@+id/ingredient1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:text="@string/ingredient1"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredients" />

        <TextView
            android:id="@+id/ingredient2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:text="@string/ingredient2"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredient1" />

        <TextView
            android:id="@+id/ingredient3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:text="@string/ingredient3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredient2" />

        <TextView
            android:id="@+id/methodOfPreparation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:text="@string/prepare_mode"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredient3" />

        <TextView
            android:id="@+id/methodOfPreparationDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:text="@string/prepare_mode_text"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/methodOfPreparation" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>