<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    android:padding="20dp"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/intro_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="#FBBFB9"
        android:contentDescription="@string/intro_image_description"
        android:minWidth="500dp"
        android:src="@drawable/drink06"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_edit_Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:backgroundTint="@color/dark_purple"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/amita"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLength="255"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_purple"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/intro_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_edit_Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:backgroundTint="@color/dark_purple"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/amita"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLength="255"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_purple"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_Text" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/enter_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:strokeColor="@color/dark_purple"
        android:fontFamily="@font/amita"
        android:textColor="@color/dark_purple"
        android:textStyle="bold"
        android:text="@string/enter"
        />


</androidx.constraintlayout.widget.ConstraintLayout>